# DAA-Problemsets

./: CMakeLists.txt  README.md
Backtracking/NQueens/: main.cpp
Backtracking/Sudoku/: main.cpp
Branch and Bound/Traveling Salesman/Bitmasking/: main.cpp
Brand and Bound/Traveling Salesman/Bitmasking/: main.cpp
Brand and Bound/Traveling Salesman/Graph/: main.cpp
Greedy/Huffman Coding/: heap.h  huffman.h  main.cpp  node.h
Knapsack/0-1 Tabulation/: main.cpp
Knapsack/Fractional/: main.cpp
Least Common Subsequence/: main.cpp
NP REPORTING PROBLEMS/Battleship/: main.cpp
NP REPORTING PROBLEMS/Clique/: main.cpp
NP REPORTING PROBLEMS/Exact Cover/: main.cpp
NP REPORTING PROBLEMS/Job Scheduling/: main.cpp
NP REPORTING PROBLEMS/Longest Increasing Subsequence/: main.cpp
NP REPORTING PROBLEMS/Subset Sum/: main.cpp
Sorting/MergeSort/: main.cpp
Sorting/QuickSort/: main.cpp
Trees/2,4 Tree/Deletion/: btree24.h  main.cpp  node.h
Trees/2,4 Tree/Insertion/: btree24.h  node.h
Trees/AVL Tree/01 Rotate (zigleft & zigright)/: binarytree.h  bst.h  main.cpp  mybinarytree.h  node.h
Trees/AVL Tree/02 Restructure/: binarytree.h  bst.h  main.cpp  mybinarytree.h  node.h
Trees/RedBlackTree/: main.cpp  node.h  tree.h
Trees/Splay Tree/: node.h  tree.h
codeforces/: main.cpp
toSolve/BACKTRACKING STUFF/: graph coloring.cpp  hamiltonian cycle.cpp  n queens 2d.cpp  n queens.cpp
toSolve/DP STUFF/: least common subsequence tabulation.cpp  subset sum matrix.cpp  subset sum.cpp
toSolve/GREEDY STUFF/: fractional knapsack.cpp  job scheduling.cpp
(+5 files in other folders)
