cmake_minimum_required(VERSION 4.2)
project("Design and Analysis of Algorithms")

set(CMAKE_CXX_STANDARD 20)

add_executable(Design_and_Analysis_of_Algorithms
        Trees/RedBlackTree/main.cpp
        Trees/RedBlackTree/node.h
        Trees/RedBlackTree/tree.h
        Trees/RedBlackTree/tree.h
        Trees/RedBlackTree/node.h
        Trees/RedBlackTree/main.cpp
        Knapsack/Fractional/main.cpp
        Backtracking/Sudoku/main.cpp
        Sorting/MergeSort/main.cpp
        Sorting/QuickSort/main.cpp
        "Knapsack/0-1 Tabulation/main.cpp"
        Backtracking/Sudoku/main.cpp
        Trees/RedBlackTree/main.cpp
        Sorting/QuickSort/main.cpp
        Backtracking/NQueens/main.cpp
        Backtracking/NQueens/main.cpp
        Backtracking/NQueens/main.cpp
        Backtracking/NQueens/main.cpp
        Backtracking/NQueens/main.cpp
)
